Changed image name

--- a/nhrd/docker-compose.yml
+++ b/nhrd/docker-compose.yml
@@ -2,7 +2,7 @@
 # services:
 nhrd.mautic.app:
   build: .
-  image: nhrd/mautic
+  image: mautic/mautic
   container_name: nhrd.mautic.app
   hostname: nhrd.mautic.app
   # expose:
