--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -44,52 +44,51 @@ http {
     #gzip  on;
     # tells the server to use on-the-fly gzip compression.
 
-    upstream nhrd/mautic {
-      server nhrd.mautic.app:80;
-    }
-
-    server {
-        # You would want to make a separate file with its own server block for each virtual domain
-        # on your server and then include them.
-        listen       80;
-        #tells Nginx the hostname and the TCP port where it should listen for HTTP connections.
-        # listen 80; is equivalent to listen *:80;
-
-        # server_name your-domain.com www.your-domain.com;
-        server_name	mkt.nhrd.co;
-        # lets you doname-based virtual hosting
-        #charset koi8-r;
-        #access_log  logs/host.access.log  main;
-
-        #root configuration for static files.
-        root   /usr/share/nginx/html;
-        # index  index.html index.htm;
-        index  index.php index.html index.htm;
-
-        error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+    upstream wordpress {
+      server nhrd_app:80;
     }
 
     # server {
-    #     listen 80;
+    #     # You would want to make a separate file with its own server block for each virtual domain
+    #     # on your server and then include them.
+    #     listen       80;
+    #     #tells Nginx the hostname and the TCP port where it should listen for HTTP connections.
+    #     # listen 80; is equivalent to listen *:80;
 
-    #     server_name blog.your-domain.com;
+    #     # server_name your-domain.com www.your-domain.com;
+    #     # server_name	mkt.nhrd.co;
+    #     # lets you doname-based virtual hosting
+    #     #charset koi8-r;
+    #     #access_log  logs/host.access.log  main;
 
-    #     location / {
-    #         proxy_pass http://wordpress/;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection 'upgrade';
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP  $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_cache_bypass $http_upgrade;
+    #     #root configuration for static files.
+    #     root   /usr/share/nginx/html;
+    #     # index  index.html index.htm;
+    #     index  index.php index.html index.htm;
+
+    #     error_page  404              /404.html;
+
+    #     # redirect server error pages to the static page /50x.html
+    #     #
+    #     error_page   500 502 503 504  /50x.html;
+    #     location = /50x.html {
+    #         root   html;
     #     }
     # }
+
+    server {
+        listen 80;
+        server_name mkt.nhrd.co;
+        location /
+        # location / {
+            # proxy_pass http://wordpress/;
+            # proxy_http_version 1.1;
+            # proxy_set_header Upgrade $http_upgrade;
+            # proxy_set_header Connection 'upgrade';
+            # proxy_set_header Host $host;
+            # proxy_set_header X-Real-IP  $remote_addr;
+            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_cache_bypass $http_upgrade;
+        # }
+    }
 }
