--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -44,7 +44,7 @@ http {
     #gzip  on;
     # tells the server to use on-the-fly gzip compression.
 
-    upstream wordpress {
+    upstream mkt.nhrd.co {
       server nhrd_app:80;
     }
 
