--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -45,7 +45,7 @@ http {
     # tells the server to use on-the-fly gzip compression.
 
     upstream mkt.nhrd.co {
-      server nhrd_app:80;
+      server nhrd.mautic.app:80;
     }
 
     # server {
