--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -1,4 +1,5 @@
 web:
+  container_name: web_nginx
   restart: always
   build: ./conf/
   ports:
@@ -6,4 +7,4 @@ web:
   volumes:
     - /path/in/vm/www:/usr/share/nginx/html
   external_links:
-    - nhrd.mautic.app:nhrd_app
+    - nhrd.mautic.app
