--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -1,10 +1,10 @@
 web:
-  container_name: web_nginx
+  container_name: web_nginx 
   restart: always
   build: ./conf/
   ports:
     - "80:80"
   volumes:
-    - /path/in/vm/www:/usr/share/nginx/html
+    - ./volumes/www:/usr/share/nginx/html
   external_links:
     - nhrd.mautic.app
