--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -79,7 +79,7 @@ http {
     server {
         listen 80;
         server_name mkt.nhrd.co;
-        location /
+        location / {}
         # location / {
             # proxy_pass http://wordpress/;
             # proxy_http_version 1.1;
