--- a/nhrd/docker-compose.yml
+++ b/nhrd/docker-compose.yml
@@ -62,9 +62,9 @@ mautic:
     - mauticdb:mysql
   volumes:
     - ./volumes/app:/var/www/html
+    - ./volumes/crontab:/etc/cron.d/mautic
   environment:
     - VIRTUAL_HOST=mkt.nhrd.co
-    - MAUTIC_RUN_CRON_JOBS=true
 
 mauticdb:
   image: mysql:5.6
