--- a/mautic-builder/Dockerfile
+++ b/mautic-builder/Dockerfile
@@ -38,7 +38,10 @@ RUN curl -o mautic.zip -SL http://nhrd.co/mautic-custom.zip \
 COPY docker-entrypoint.sh /entrypoint.sh
 COPY makeconfig.php /makeconfig.php
 COPY makedb.php /makedb.php
+
 COPY mautic.crontab /etc/cron.d/mautic
+RUN crontab /etc/cron.d/mautic
+
 COPY mautic-php.ini /usr/local/etc/php/conf.d/mautic-php.ini
 # Enable Apache Rewrite Module
 RUN a2enmod rewrite
