--- a/mautic-builder/Dockerfile
+++ b/mautic-builder/Dockerfile
@@ -40,7 +40,9 @@ COPY makeconfig.php /makeconfig.php
 COPY makedb.php /makedb.php
 
 COPY mautic.crontab /etc/cron.d/mautic
-RUN crontab /etc/cron.d/mautic
+COPY mautic.crontab /var/spool/cron/crontabs/mautic
+# RUN crontab /etc/cron.d/mautic
+# RUN crontab /etc/cron.d/mautic
 
 COPY mautic-php.ini /usr/local/etc/php/conf.d/mautic-php.ini
 # Enable Apache Rewrite Module
