--- a/mautic-builder/Dockerfile
+++ b/mautic-builder/Dockerfile
@@ -42,8 +42,8 @@ COPY makedb.php /makedb.php
 # RUN mkdir /var/spool
 # RUN mkdir /var/spool/cron
 COPY mautic.crontab /etc/cron.d/mautic
-RUN chmod 0644 /etc/cron.d/mautic
-RUN touch /var/log/cron.log
+# RUN chmod 0644 /etc/cron.d/mautic
+# RUN touch /var/log/cron.log
 # COPY mautic.crontab /var/spool/cron/crontabs/mautic
 # RUN crontab /etc/cron.d/mautic
 # RUN crontab /etc/cron.d/mautic
