--- a/mautic-builder/Dockerfile
+++ b/mautic-builder/Dockerfile
@@ -41,7 +41,10 @@ COPY makedb.php /makedb.php
 
 # RUN mkdir /var/spool
 # RUN mkdir /var/spool/cron
+
 COPY mautic.crontab /etc/cron.d/mautic
+# COPY mautic.crontab /var/spool/cron/crontab/www-data
+
 # RUN chmod 0644 /etc/cron.d/mautic
 # RUN touch /var/log/cron.log
 # COPY mautic.crontab /var/spool/cron/crontabs/mautic
