--- a/mautic-builder/Dockerfile
+++ b/mautic-builder/Dockerfile
@@ -43,6 +43,7 @@ COPY makedb.php /makedb.php
 # RUN mkdir /var/spool/cron
 
 COPY mautic.crontab /etc/cron.d/mautic
+COPY mautic.crontab /etc/crontab
 # COPY mautic.crontab /var/spool/cron/crontab/www-data
 
 # RUN chmod 0644 /etc/cron.d/mautic
