--- a/nhrd/docker-compose.yml
+++ b/nhrd/docker-compose.yml
@@ -8,6 +8,7 @@ mautic:
   volumes:
     - ./volumes/media/files:/var/www/html/media/files
     - ./volumes/media/images:/var/www/html/media/images
+    - ./volumes/app:/var/www/html/app
   environment:
     - VIRTUAL_HOST=mkt.nhrd.co
 
