--- a/nhrd/docker-compose.yml
+++ b/nhrd/docker-compose.yml
@@ -15,6 +15,7 @@ mauticdb:
   image: mysql:5.6
   container_name: nhrd.mautic.db
   hostname: nhrd.mautic.db
+  restart: always
   volumes:
      - ./volumes/db:/var/lib/mysql
   environment:
